fix overflow

--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ main {
   padding-top: 100px;
   padding-bottom: 100px;
   box-sizing: border-box;
-  overflow-y: auto;
   height: 100%;
 }
 
